Fix lightbox layout bug

--- a/src/wwwroot/css/components/_lightbox.css
+++ b/src/wwwroot/css/components/_lightbox.css
@@ -1,20 +1,23 @@
 /* Essential styles */
     #lightbox {
         display: none;
+        grid-template-columns: auto 1fr auto;
+        grid-template-rows: auto 1fr;
+        
         position: fixed;
         z-index: 2;
         left: 0;
         top: 0;
-        height: 100%;
-        width: 100%;
-        grid-template-columns: auto 1fr auto;
-        grid-template-rows: auto 1fr;
+        height: 100vh;
+        width: 100vw;        
     }
 
     .slide {
         display: none;
         grid-column: 2;
-        grid-row: 2;
+        grid-row: 1 / 3;
+        width: 100%;
+        height: auto;
         place-self: center;
     }
 
@@ -37,8 +40,10 @@
     }
 
     #lightbox img {
-        width: 70vw;
+        width: 100%;
         height: auto;
+        max-height: 85vh;
+        object-fit: cover;
         image-orientation: from-image;
     }
 /* End essential styles */
